<resources>
    <string name="app_name">WCG-android</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gallery">Gallery</string>
    <string name="generate_wordcloud">WordCloud</string>
    <string name="textView_title">Title</string>
    <string name="ENTER_TITLE_HERE">여기에 제목 입력</string>
    <string name="textView_data">Data</string>
    <string name="ENTER_DATA_HERE">여기에 내용 입력</string>
    <string name="mask_image">Mask Image</string>
    <string name="LOAD_IMAGE">이미지 불러오기...</string>
    <string name="GENERATE">만들기</string>
    <string name="need_permission">사진 및 파일을 저장하고 읽기 위하여 접근 권한이 필요합니다.</string>
    <string name="permission_setting"><![CDATA[[설정] > [권한] 에서 권한을 허용할 수 있습니다.]]></string>
    <string name="textView_font">Font</string>
    <string name="textView_backgroundColor">Back</string>
    <string name="textView_backgroundColorContent">white</string>
    <string name="textView_title_content">title_example</string>
    <string name="textView_backgroundColor_content">white</string>
    <string name="textView_font_content">default</string>
</resources>
