<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_result"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="WordCloud Image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout_resultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/constraintLayout_resultData"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_result">

            <TextView
                android:id="@+id/textView_resultTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textView_title"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/textView_resultTitleContent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_resultTitleContent"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/ENTER_TITLE_HERE"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textView_resultTitle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout_resultData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout_resultTitle">

            <TextView
                android:id="@+id/textView_resultData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textView_data"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/textView_resultDataContent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_resultDataContent"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:gravity="center_vertical"
                android:hint="@string/ENTER_DATA_HERE"
                android:inputType="textMultiLine"
                android:maxHeight="500dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textView_resultData"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>
